Prevent jQuery UI draggable from causing undesirable line wrapping upon drag start

--- a/css/frontend.css
+++ b/css/frontend.css
@@ -21,6 +21,10 @@
 	position: absolute;
 	padding: 5px;
 	z-index: 2;
+
+	/* Prevent jQuery UI draggable from causing undesirable line wrapping upon drag start */
+	width: auto !important;
+	height: auto !important;
 }
 .featured-content-item .title.dragging {
 	cursor: move;
